# nit

./: Cargo.toml
src/: arena.rs  database.rs  index.rs  lib.rs  lockfile.rs  main.rs  refs.rs  repository.rs  tree.rs  utils.rs  workspace.rs
src/database/: author.rs  blob.rs  commit.rs  mod.rs  tree.rs
src/index/: checksum.rs  entry.rs  mod.rs
