[package]
name = "nit"
version = "0.1.0"
authors = ["Daniel Rivas Perez <daniel.rivas@hey.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.21"
anyhow = "1.0.38"
sha-1 = "0.9.4"
flate2 = { version = "1.0.20", features = ["zlib"] }
rand = "0.8.3"
chrono = "0.4.19"
thiserror = "1.0.24"
